force-app/main/default/objects/leankor__MasterContainer__c/leankor__MasterContainer__c.object-meta.xml
<CustomObject>
    <description>There can be one or more containers (MasterContainer object) per Kanban Board (ValueStream record of Board Type = Kanban Board). This is a higher level column which can contain horizontal swim lanes (SwimLane object), and multiple columns (Zone object = column) within each swim lane.</description>
    <label>Master Container</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Container Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>