force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Height__c.field-meta.xml
<CustomField>
    <fullName>leankor__Height__c</fullName>
    <defaultValue>670</defaultValue>
    <description>This field shows height of Master container in pixel.</description>
    <inlineHelpText>Enter the height of Master container in pixel.</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>