force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__IsCardAvailable__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsCardAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Card Available</label>
    <type>Checkbox</type>
</CustomField>