force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Left__c.field-meta.xml
<CustomField>
    <fullName>leankor__Left__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>This field contains KanbanCard in the left most zone.</description>
    <inlineHelpText>This field contains KanbanCard in the left most zone.</inlineHelpText>
    <label>Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>