force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Order__c.field-meta.xml
<CustomField>
    <fullName>leankor__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This filed describes order number of Master Container (first, second, third and so on).</description>
    <inlineHelpText>This filed describes order number of Master Container (first, second, third and so on).</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>