force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Top__c.field-meta.xml
<CustomField>
    <fullName>leankor__Top__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>This field is upper dimension of Master Container.</description>
    <inlineHelpText>This field is upper dimension of Master Container.</inlineHelpText>
    <label>Top</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>