force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Type__c.field-meta.xml
<CustomField>
    <fullName>leankor__Type__c</fullName>
    <description>This field describes type of Master Container (i.e. BackLog, Regular, Archive).</description>
    <inlineHelpText>This field describes type of Master Container (i.e. BackLog, Regular, Archive).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>