force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains ID of Value Stream in which Master Container presents.</description>
    <inlineHelpText>This field contains ID of Value Stream in which Master Container presents.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Master Containers</relationshipLabel>
    <relationshipName>Master_Containers</relationshipName>
    <type>Lookup</type>
</CustomField>