force-app/main/default/objects/leankor__MasterContainer__c/fields/leankor__Width__c.field-meta.xml
<CustomField>
    <fullName>leankor__Width__c</fullName>
    <defaultValue>390</defaultValue>
    <description>This field shows width of master Container that how much wide Master Container is.</description>
    <inlineHelpText>This field shows width of master Container that how much wide Master Container is.</inlineHelpText>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>