force-app/main/default/objects/leankor__MasterContainer__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>leankor__Color__c</columns>
    <columns>leankor__CmpID__c</columns>
    <columns>leankor__GUID__c</columns>
    <columns>leankor__IsCardAvailable__c</columns>
    <columns>leankor__Limit__c</columns>
    <columns>leankor__Order__c</columns>
    <columns>leankor__Title__c</columns>
    <columns>leankor__Top__c</columns>
    <columns>leankor__Type__c</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>leankor__Unit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>